changes add user from position relative to position absolute and restyles it to ensure overflow of users online does not affect it

--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -87,10 +87,10 @@
 }
 
 #add-user-in-member-box {
-  position: relative;
+  position: absolute;
   width: 180px;
-  left: -2px;
-  top: 185px;
+  left: 13px;
+  top: 272px;
   color: #000000;
   text-decoration: none;
   word-spacing: -10px;
